@@ -1,5 +1,7 @@
 Version 2.00.16 - 
 =============================
+  Ensure presence of virtual targets before attempting activating.
+  Attempt to fix resizing of snapshot origins.
   Restructure lvresize, bringing it closer to lvcreate.
   A quick sanity check on vg_disk struct when read in.  More checks needed.
   Only include visible LVs in active/open counts.
